tests/valid/testeOperacoes.ts
let plus: number = 10 + 20;

let k: number = plus * 2;
