tests/invalid/testeOperacoesinvalidasNdeclaradas.ts
let ls: number = a + 1;

let ls: number = b + 1;

let ls: number = ff + 1;
